--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,3 @@
-homepage --> 
-1. make searchbar working and redirect page to events page
-2. link all the social media sites
-3. In popular categories api change the controller to give all events count at first and then give specific day event counts
-4. In upcoming events api change the controller to give all events count at first and then give specific day event count
-5. Add upcoming event
-6. Add editors pick events
-7. Show calender option to show events for specific date
-8. Add skeleton view for events at first
-8. When events data is fetching up then 1st show the whole page and only load the skeleton view for events whicha re getting fetched
-
 Profile --> 
 1. If no firstname lastname then show black space or type your name
 2. remove all the saved card UI as we are not asking any contact details on our site
@@ -31,11 +20,116 @@ Event description page -->
 3. add to calender option make it working
 4. like button is different from the favorite button
 
+-----------------------------------------------------------------------------
 
 
 
+
+?????????????????????????????????????????????????????????????????????????????
+
+Google signin
+Facebook signin
+
+Task to do today
+-> Handle login screen error (done)
+-> Google signin
+-> facebook signin
+-> search bar working
+-> filter option
+-> select date 
+-> vendor side change date form field
+-> aspect ration of the image
+-> loading screens
+-> animation
+-> validation
+-> vendor user redirection
+-> login user verification
+-> vendor navbar
+
+Admin Model
+Create event (done)
+Create offer (done)
+Delete offer  (done)
+Delete event (done)
+Create vendor (done)
+Verify vendor (done)
+Delete vendor (done)
+Delete user 
+Add venue 
+List vendors
+List events
+List users
+Event description
+Ticket status
+
+
+Admin APIs
+--> User APIs
+-1. Change login register apis to sync with admin (done)
+0. change middleware to cop with admin and user (done)
+1. Delete User (done)
+2. See Users purchased Events 
+4. See Users Data
+5. Send Notification to the user
+
+--> Vendor APIs
+1. Create Vendor
+2. Update Vendor
+3. Delete Vendor
+4. Verify Vendor
+5. Notify Vendor
+6. Give Notification to the vendor
+
+--> Event APIs
+1. Create Event
+2. Update Event
+3. Delete Event
+4. List Events
+5. Event Description
+
+--> Offer APIs
+1. Create Offer
+2. Update Offer
+3. Delete Offer
+4. List Offer
+5. Offer Description
+
+--> Venue APIs
+1. Create Venue
+2. Update Venue
+3. Delete Venue
+
+--> Tickets APIs
+1. List Of available tickets
+2. Events with maximum booked tickets
+
+--> Category APIs
+1. Create Category
+2. Edit Category
+3. Update Category
+4. Get Category all events
+4. Delete Category
+
+
+admin page apis
+
+unverified vendors List
+create event create offer buttons
+recent events list --> after clicking show all events
+recent offers list --> after clicking show all offers
+recent booked tickets --> after clicking show all booked tickets
+
+all vendors list
 
 ------------------------------------------------------------------------------
+homepage --> 
+1. make searchbar working and redirect page to events page (pending) 
+2. link all the social media sites (pending)
+3. In popular categories api change the controller to give all events count at first and then give specific day event counts (done)
+4. In upcoming events api change the controller to give all events count at first and then give specific day event count (done)
+5. Add upcoming event (pending)
+6. Add editors pick events (pending)
+7. Show calender option to show events for specific date (pending)
 
 vendor Homepage -->
 1. Add button to see hosted events in navbar (done)
